log
Wed 27 Mar 2024 08:01:08 PM UTC: 
 tests:  0|6
total_score: 0/70
38f1cdb
Wed 27 Mar 2024 08:08:33 PM UTC: 
 list.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  0|6
total_score: 0/70
00d1d95
Wed 27 Mar 2024 08:10:00 PM UTC: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
6246eb6
Wed 27 Mar 2024 08:18:07 PM UTC: 
 list.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  2|5
total_score: 15/70
7d608ff
Wed 27 Mar 2024 08:20:20 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:48:1: error: control reaches end of non-void function [-Werror=return-type]
   48 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
81782e3
Wed 27 Mar 2024 08:21:54 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
a7fdcf2
Wed 27 Mar 2024 08:23:48 PM UTC: 
 list.c | 7 +++++++
 1 file changed, 7 insertions(+)
 tests:  5|4
total_score: 25/70
50a8865
Wed 27 Mar 2024 08:24:51 PM UTC: 
 list.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  5|4
total_score: 25/70
2f003fd
Wed 27 Mar 2024 08:28:06 PM UTC: 
 list.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  6|4
total_score: 25/70
a7161a1
Wed 27 Mar 2024 08:29:48 PM UTC: 
 list.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  9|3
total_score: 35/70
2c8f69f
Wed 27 Mar 2024 08:34:46 PM UTC: 
 list.c | 9 +++++++++
 1 file changed, 9 insertions(+)
 tests:  10|2
total_score: 45/70
281f3d8
Wed 27 Mar 2024 08:37:51 PM UTC: 
 list.c | 9 +++++++++
 1 file changed, 9 insertions(+)
 tests:  10|2
total_score: 45/70
87d2c20
Wed 27 Mar 2024 08:39:20 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  10|2
total_score: 45/70
cb760ec
Wed 27 Mar 2024 08:44:09 PM UTC: 
 list.c | 11 ++---------
 1 file changed, 2 insertions(+), 9 deletions(-)
In file included from test.c:5:
list.c:93:5: error: data definition has no type or storage class [-Werror]
   93 |     pushCurrent(list,data);
      |     ^~~~~~~~~~~
list.c:93:5: error: type defaults to ‘int’ in declaration of ‘pushCurrent’ [-Werror=implicit-int]
list.c:93:5: error: parameter names (without types) in function declaration [-Werror]
list.c:93:5: error: conflicting types for ‘pushCurrent’; have ‘int()’
In file included from list.c:4,
                 from test.c:5:
list.h:20:6: note: previous declaration of ‘pushCurrent’ with type ‘void(List *, void *)’ {aka ‘void(struct List *, void *)’}
   20 | void pushCurrent(List * list, void * data);
      |      ^~~~~~~~~~~
In file included from test.c:5:
list.c:94:1: error: expected identifier or ‘(’ before ‘}’ token
   94 | }
      | ^
list.c: In function ‘pushCurrent’:
list.c:98:1: error: expected expression before ‘}’ token
   98 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
fe8afd3
